Feat/user service (#173)
* feat(UserService): UserService was added with tests

* fix(UserService): Lint error

* fix(UserService): Fix tests

* feat(UserApi): Add UserApi

* feat(UserApi): Add simple tests

* feat(UserApi): Add SessionStorage and api test

* fix(UserApi): Lint error

* feat(UserApi): Docker was added

* fix(UserApi): Review problems

* fix(UserApi): Session Midelware

* fix(infra): fix logging in and some tests (#176)

* fix(UserApi): Decode two times JSON
feat(AuthService): Two diferent auth func for client and hotel

* fix(Lint): Remove lint error

* feat(InitPostgres): Add users, sessions and hotels
