# server/pkg/testutils/httpJson.go
@@ -7,18 +7,36 @@ import (
 	"net/http"
 	"testing"
 
+	"github.com/pw-software-engineering/b-team/server/pkg/auth"
+	"github.com/pw-software-engineering/b-team/server/pkg/bookly"
+
 	"github.com/pw-software-engineering/b-team/server/pkg/httputils"
 	"github.com/stretchr/testify/require"
 )
 
+// RequestOpt is optional argument for JSONRequest, which lets you e.g. add session header to request
+type RequestOpt func(req *http.Request)
+
+// WithSessionHeader func
+func WithSessionHeader(s bookly.Session) RequestOpt {
+	sessionJSON, _ := json.Marshal(s)
+	return func(req *http.Request) {
+		req.Header.Set(auth.HeaderXSession, string(sessionJSON))
+	}
+}
+
 // JSONRequest initialize JSON request for testing
-func JSONRequest(t *testing.T, method string, url string, marshallable interface{}) *http.Request {
+func JSONRequest(t *testing.T, method string, url string, marshallable interface{}, opts ...RequestOpt) *http.Request {
 	var body bytes.Buffer
 	err := json.NewEncoder(&body).Encode(marshallable)
 	require.NoError(t, err)
 	req, err := http.NewRequest(method, url, &body)
 	req.Header.Add("Content-Type", "application/json")
 	require.NoError(t, err)
+	for _, opt := range opts {
+		opt(req)
+	}
+
 	return req
 }
 
